<resources>
    <string name="app_name">QrBarcodeScanner3</string>
    <string name="asses_camera">For the application to work, you need access to the camera</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="rate_app">Rate app</string>
    <string name="share_app">Share App</string>

    <string name="internet_connection_error">No internet connection</string>

    <string name="app_google_play_link">https://play.google.com/store/apps/details?id=</string>
    <string name="app_google_play_prelink">market://details?id=</string>

    <string name="permission_granted_external_storage">Permission granted, Now you can access external storage</string>
    <string name="permission_denied_external_storage">Permission denied, You cannot access and external storage</string>
    <string name="permission_denied_location">Permission denied, you cannot connect to wi-fi</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="option_generate">Generate QR- and barcode\nwith verious types</string>
    <string name="done">Done</string>

    <string name="hold_device">Hold the device still\nand focus the code</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <string name="some_error">Some Error Occurred</string>

    <string name="text_coppied">Copy to clipboard!</string>
    <string name="no_email_clients">There are no email clients installed</string>

    <string name="location">Location</string>
    <string name="website">Website</string>
    <string name="wifi">Wi-fi</string>
    <string name="telephone">Phone number</string>
    <string name="telephone_two">Phone</string>
    <string name="contacts">Contacts</string>
    <string name="text">Text</string>
    <string name="email">E-mail</string>
    <string name="message">Message</string>
    <string name="product">Product</string>
    <string name="isbn">ISBN</string>
    <string name="event">Event</string>

    <string name="field_text">Text:</string>
    <string name="field_name">Name:</string>
    <string name="field_position">Position:</string>
    <string name="field_company">Company:</string>
    <string name="field_phone_number_one">Phone number:</string>
    <string name="field_phone_number_two">Phone number:</string>
    <string name="field_email">Email:</string>
    <string name="field_address">Address:</string>
    <string name="field_url">URL/Website:</string>
    <string name="field_your_email">Your email:</string>
    <string name="field_subject">Subject:</string>
    <string name="field_message">Message:</string>
    <string name="field_isbn">International standard book number:</string>
    <string name="field_latitude">Latitude:</string>
    <string name="field_longitude">Longitude:</string>
    <string name="field_query">Query:</string>
    <string name="field_ssid">SSID:</string>
    <string name="field_password">Password:</string>
    <string name="field_network_encryption">Network encryption:</string>
    <string name="field_hidden">Hidden:</string>
    <string name="field_product_code">Product code:</string>
    <string name="field_event_title">Event title:</string>
    <string name="field_description">Description:</string>
    <string name="field_event_location">Event location:</string>
    <string name="field_starttime">Start time:</string>
    <string name="field_endtime">End time:</string>
    <string name="field_organizer">Organizer:</string>
    <string name="field_note">Note:</string>

    <string name="btn_title_open_map">Open map</string>
    <string name="btn_title_add_contact">Add contact</string>
    <string name="btn_title_dial_phone">Dial phone</string>
    <string name="btn_title_send_sms">Send SMS</string>
    <string name="btn_title_send_email">Send email</string>
    <string name="btn_title_open_url">Open url</string>
    <string name="btn_title_connect_wifi">Connect Wi-fi</string>
    <string name="btn_title_add_event">Add event</string>
    <string name="btn_title_search">Search</string>
    <string name="btn_title_share">Share</string>
    <string name="btn_title_copy">Copy</string>
    <!--    <string name="scan">Scan</string>-->
    <!--        <string name="create">Create</string>-->
    <!--    <string name="scanned">Scanned</string>-->
    <!--    <string name="created">Created</string>-->
    <string name="scanned_qr_code_title">Scanned QR-codes</string>
    <string name="list_empty_title">Scanned QR-codes</string>

    <string name="error_empty_text">Text is empty</string>
    <string name="error_empty_url">URL is empty</string>
    <string name="error_empty_tel">Phone is empty</string>
    <string name="error_empty_email">E-mail is empty</string>
    <string name="error_empty_ssid">SSID is empty</string>
    <string name="error_empty_name">Name must be at least 1 character</string>
    <string name="error_url_invalid">URL is invalid</string>
    <string name="error_email_invalid">E-mail is invalid</string>
    <string name="error_empty_latitude">Latitude is not a correct value</string>
    <string name="error_empty_longitude">Longitude is not a correct value</string>
    <string name="error_range_latitude">Latitude must be in [-90:90]</string>
    <string name="error_range_longitude">Longitude must be in [-180:180]</string>

    <string name="network_encryption_wpa">WPA/WPA2</string>
    <string name="network_encryption_wep">WEP</string>
    <string name="network_encryption_none">None</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
