<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.main.MainActivity">

    <com.github.florent37.materialviewpager.MaterialViewPager
        android:id="@+id/materialViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:viewpager_pagerTitleStrip="@layout/material_view_pager_pagertitlestrip_newstand"
        app:viewpager_logoMarginTop="100dp"
        app:viewpager_color="@color/colorPrimary"
        app:viewpager_headerHeight="200dp"
        app:viewpager_headerAlpha="1.0"
        app:viewpager_imageHeaderDarkLayerAlpha="0.2"
        app:viewpager_hideLogoWithFade="false"
        app:viewpager_hideToolbarAndTitle="true"
        app:viewpager_enableToolbarElevation="true"
        app:viewpager_parallaxHeaderFactor="1.5"
        app:viewpager_headerAdditionalHeight="20dp"
        app:viewpager_displayToolbarWhenSwipe="true"
        app:viewpager_transparentToolbar="false"
        app:viewpager_animatedHeaderImage="true"

        />

    <!--    <include layout="@layout/drawer" />-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:icon="@drawable/ic_menu"
        android:background="@android:color/white"
        android:visibility="visible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorHeaderSix"
                    android:layout_marginTop="33dp"
                    android:layout_marginLeft="@dimen/cardMarginHorizontal"
                    android:layout_marginRight="@dimen/cardMarginHorizontal"
                    android:layout_marginBottom="@dimen/cardMarginVertical"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp"
                    app:cardPreventCornerOverlap="false"
                    app:contentPadding="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="24dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/qrcode"/>
                        <TextView
                            style="@style/TextStyle.Heading"
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="24dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@android:color/white"
                            android:text="@string/app_name"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!--                <include-->
                <!--                    android:id="@+id/drawer"-->
                <!--                    layout="@layout/drawer" />-->

                <LinearLayout
                    android:id="@+id/nav_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_settings"/>

                    <TextView
                        style="@style/TextStyle.Title"
                        android:id="@+id/tv_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:textColor="@color/colorHeaderSix"
                        android:text="@string/settings"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_share"/>

                    <TextView
                        style="@style/TextStyle.Title"
                        android:id="@+id/tv_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:textColor="@color/colorHeaderSix"
                        android:text="@string/share"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_stars"/>

                    <TextView
                        style="@style/TextStyle.Title"
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:textColor="@color/colorHeaderSix"
                        android:text="@string/rate_app"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>